[project]
name = "last-algorithms-course"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = []

[tool.ruff]

exclude = [
     ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
# Same as Black.
line-length = 120
indent-width = 4

# Assume Python 3.12
target-version = "py310"



[tool.ruff.lint]
ignore = ["ISC001", "D203", "D213","E722","F405"]

select = [
    "ANN", # flake8-annotations
    "ARG", # flake8-arguments
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "C90", # mccabe complexity
    "D", # pydocstyle
    "DJ", # flake8-django
    "DTZ", # flake8-datetimez
    "E", # pycodestyle
    "EM", # flake8-errmsg
    "F", # flake8
    "G", # flake8-logging-format
    "I", # isort
    "ISC", # flake8-implicit-str-concat
    "LOG", # flake8-logging
    "N", # pep8-naming
    "PIE", # flake8-pie
    "PT", # flake8-pytest-style
    "PTH", # flake8-use-pathlib
    "RET", # flake8-return
    "RUF", # ruff-specific rules
    "Q", # flake8-quotes
    "SIM", # flake8-simplify
    "T10", # flake8-print
    "TCH", # flake8-type-checking
    "TRY", # tryceratops
    "UP", # pyupgrade
]
extend-select = ["I", "F"]
# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]

line-ending = "lf"
# Like Black, use double quotes for strings.
quote-style = "double"
# Like Black, automatically detect the appropriate line ending.
indent-style = "space"
skip-magic-trailing-comma = false
docstring-code-format = true
docstring-code-line-length = "dynamic"



[tool.ruff.lint.isort]
case-sensitive = true
split-on-trailing-comma = false